--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -8,4 +8,7 @@ form(action="/users/search", method="GET")
 
 ul
   each user in users
-    li= user.name
+    li
+      span= user.name
+      span &nbsp;
+      a(href='/users/' + user.id) View
