--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -1,14 +1,17 @@
-h1 Users
+extends ../layouts/common
 
-a(href="/users/create") New
+block content
+  h1 Users
 
-form(action="/users/search", method="GET")
-  input(type="text", name="q")
-  button Search
+  a(href="/users/create") New
 
-ul
-  each user in users
-    li
-      span= user.name
-      span &nbsp;
-      a(href='/users/' + user.id) View
+  form(action="/users/search", method="GET", class="d-flex")
+    input(type="text", name="q", class="form-control")
+    button(class="btn btn-primary ml-2") Search
+
+  ul
+    each user in users
+      li
+        span= user.name
+        span &nbsp;
+        a(href='/users/' + user.id) View
