--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -1,17 +1,24 @@
 extends ../layouts/common
 
 block content
-  h1 Users
+  h1
+    span.mr-3 Users
+    a.btn.btn-primary(href="/users/create") New
 
-  a(href="/users/create") New
+  .d-flex.align-items-center
+    form.ml-auto(action="/users/search", method="GET", class="d-flex")
+      input(type="text", name="q", class="form-control")
+      button(class="btn btn-primary ml-2") Search
 
-  form(action="/users/search", method="GET", class="d-flex")
-    input(type="text", name="q", class="form-control")
-    button(class="btn btn-primary ml-2") Search
+  table.table
+    tr
+      th Name
+      th Phone
+      th Actions
 
-  ul
     each user in users
-      li
-        span= user.name
-        span &nbsp;
-        a(href='/users/' + user.id) View
+      tr
+        td= user.name
+        td= user.phone
+        td
+          a.btn.btn-light(href='/users/' + user.id) View
