--- a/views/layouts/common.pug
+++ b/views/layouts/common.pug
@@ -14,6 +14,9 @@ html
           li.nav-item
             a.nav-link(href='/users') Users
 
+      if user
+        p= user.name
+
     .container.pt-5
       block content
 
