Pagination + file upload

--- a/views/users/create.pug
+++ b/views/users/create.pug
@@ -7,7 +7,7 @@ block content
     each error in errors
       .alert.alert-danger= error
 
-  form(action="/users/create", method="POST")
+  form(action="/users/create", method="POST", enctype="multipart/form-data")
     .form-group
       label(for="name") Name
       input#name.form-control(name="name", type="text", value=values ? values.name : "")
@@ -15,5 +15,9 @@ block content
     .form-group
       label(for="phone") Phone
       input#phone.form-control(name="phone", type="text", value=values ? values.phone : "")
+
+    .form-group
+      label(for="avatar") Avatar
+      input#avatar.form-control-file(name="avatar", type="file")
 
     button.btn.btn-primary Create
