--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -12,12 +12,15 @@ block content
 
   table.table
     tr
+      th Avatar
       th Name
       th Phone
       th Actions
 
     each user in users
       tr
+        td
+          img(src=user.avatar, width="32")
         td= user.name
         td= user.phone
         td
