--- a/views/layouts/common.pug
+++ b/views/layouts/common.pug
@@ -2,6 +2,8 @@ html
   head
     link(rel="stylesheet", href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css")
     link(rel="stylesheet", href="/styles/custom.css")
+    meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
+
   body
     nav.navbar.navbar-expand-lg.navbar-light.bg-light
       a.navbar-brand(href='#') Coders.Tokyo
@@ -13,9 +15,6 @@ html
             a.nav-link(href='/') Home
           li.nav-item
             a.nav-link(href='/users') Users
-
-      if user
-        p= user.name
 
     .container.pt-5
       block content
