--- a/views/layouts/common.pug
+++ b/views/layouts/common.pug
@@ -15,6 +15,10 @@ html
             a.nav-link(href='/') Home
           li.nav-item
             a.nav-link(href='/users') Users
+          li.nav-item
+            a.nav-link(href='/products') Products
+          li.nav-item
+            a.nav-link(href='/cart') Cart
 
     .container.pt-5
       block content
