--- a/views/products/index.pug
+++ b/views/products/index.pug
@@ -16,5 +16,5 @@ block content
           .card-body
             h5.card-title= product.name
             p.card-text= product.description
-            a.btn.btn-primary(href='#') Add to cart
+            a.btn.btn-primary(href='/cart/add/' + product.id) Add to cart
 
